  - Scale mapper according display resolution (aybe)
  - Added applicable changes from SVN. (Allofich)
    r4485: Enable writing to all planes when drawing pixels in EGA modes.
    r4487: Correct panning of VESA text modes.
    r4488: Correct comment about odd/even bit.
    r4490: Set MCB ownership when *blocks==total at end of DOS_ResizeMemory.
  - Replaced deprecated functions to enable building with FFmpeg 8 (maron2000)
  - Fixed screen blanked when restoring minimized window in TTF mode (Windows
    SDL1) (maron2000) 

2025.05.03
  - Show TURBO status in title bar. (maron2000)
  - Fixed MinGW32 builds failed using gcc15, due to a conflict in __inline__ 
    macro. (lazka)
  - Revise EGA/VGA emulation to treat the CRTC CGA/Hercules
    CRTC bit remapping as bits to mask out, instead of defining
    the upper limit of the memory mask. This makes the CGA mode
    Engine page flipping test work. I initially had reservations
    about whether or not real hardware did this, but, it would
    make sense for hardware to do it that way. (joncampbell123)
  - Updated libpng to version 1.6.47 (maron2000)
  - Updated XCOPY to version 1.9a (maron2000)
  - Updated SDL2 library to version 2.32.4 (maron2000)
  - Fixed a build/install error due to using wildcards in Makefile.am, which is
    not supported in GNU Automake. (maron2000)
  - macOS: Install SDL2_net in CI workflow to enable internal modem support on
    Release and Nightly SDL2 builds. (maron2000)
  - Fixed buffer size to allocate missing byte for string terminator for 
    savestate filename to prevent buffer overflow (arifogel)
  - Fixed settings of yellow color in COLOR command (maron2000)
  - Fixed COLOR command to match behavior on Windows (maron2000)
  - Fixed INT21h AH=0a cursor position moved by bell due to keyboard buffer full
    (maron2000)
  - Fixed INT21h AH=01 echo behavior (maron2000)
  - Replaced SetPixel with DIB Section Direct Memory Access for faster printing
    (DwayneSelsig)