@@ -52,6 +52,9 @@ Next version
     r4487: Correct panning of VESA text modes.
     r4488: Correct comment about odd/even bit.
     r4490: Set MCB ownership when *blocks==total at end of DOS_ResizeMemory.
+    r4492: Don't clear message queues of MPU-401 and compatibles on reset.
+    r4493: Handle EOF character in batch files as actual end of file.
+    r4494: Use 4-byte partial page mapping data.
   - Replaced deprecated functions to enable building with FFmpeg 8 (maron2000)
   - Fixed screen blanked when restoring minimized window in TTF mode (Windows
     SDL1) (maron2000) 
